altoRouterによるルーティング viewの表示 #12

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "name": "team-f/babe-base",
     "description": "HEW2021",
-    "require": {}
+    "require": {
+        "altorouter/altorouter": "^2.0"
+    }
 }
